[package]
name = "acsim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = { version = "0.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1.9"
rand = "0.8"
futures = "0.3"
fern = "0.6"
log = "0.4"
handlebars = "4"
