[package]
name = "acsim"
description = "Basic imageboard engine written in actix-web"
version = "0.10.5"
edition = "2021"

repository = "https://github.com/jbruws/acsim/"
license-file = "LICENSE"
readme = "README.md"
keywords = ["bbs", "engine", "imageboard", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6"
actix-multipart = { version = "0.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"]}
regex = "1.9"
rand = "0.8"
futures = "0.3"
fern = "0.6"
log = "0.4"
handlebars = "4"
magic = "0.16"
openssl = "0.10"
indexmap = { version = "2.1.0", features = ["serde"] }
dotenv = "0.15"
actix-governor = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "macros"] }
